@@ -50,6 +50,7 @@ import java.util.random.RandomGenerator;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import javax.cache.Cache;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.MessageSource;
 import org.springframework.security.crypto.encrypt.TextEncryptor;
@@ -170,7 +171,7 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	 * used to resolve the register index values for a given reference register
 	 * name.
 	 */
-	private Cache<String, CloudDataValue[]> deviceRegistersCache;
+	private @Nullable Cache<String, CloudDataValue[]> deviceRegistersCache;
 
 	/**
 	 * Constructor.
@@ -198,7 +199,7 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	 * @param clientAccessTokenDao
 	 *        the client access token DAO to use
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public EgaugeCloudDatumStreamService(UserEventAppenderBiz userEventAppenderBiz,
 			TextEncryptor encryptor, CloudIntegrationsExpressionService expressionService,
@@ -241,14 +242,13 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	@SuppressWarnings("BadInstanceof")
 	@Override
 	public Iterable<CloudDataValue> dataValues(UserLongCompositePK integrationId,
-			Map<String, ?> filters) {
-		requireNonNullArgument(filters, "filters");
+			@Nullable Map<String, ?> filters) {
+		final Map<String, ?> f = requireNonNullArgument(filters, "filters");
 		final CloudIntegrationConfiguration integration = requireNonNullObject(
 				integrationDao.get(requireNonNullArgument(integrationId, "integrationId")),
 				"integration");
 		final Long datumStreamId = requireNonNullArgument(
-				filters.get(DATUM_STREAM_ID_FILTER) instanceof Object o ? Long.valueOf(o.toString())
-						: null,
+				f.get(DATUM_STREAM_ID_FILTER) instanceof Object o ? Long.valueOf(o.toString()) : null,
 				"filters.datumStreamId");
 		final CloudDatumStreamConfiguration datumStream = requireNonNullObject(
 				datumStreamDao.get(new UserLongCompositePK(integrationId.getUserId(), datumStreamId)),
@@ -275,7 +275,7 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 
 		final var result = datum(datumStream, filter);
 		if ( result == null || result.isEmpty() ) {
-			return null;
+			return List.of();
 		}
 		return result.getResults();
 	}
@@ -360,9 +360,9 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	}
 
 	@SuppressWarnings("MixedMutabilityReturnType")
-	private static List<CloudDataValue> parseDeviceRegisters(String deviceId, JsonNode json) {
+	private static List<CloudDataValue> parseDeviceRegisters(String deviceId, @Nullable JsonNode json) {
 		if ( json == null ) {
-			return Collections.emptyList();
+			return List.of();
 		}
 		/*- EXAMPLE JSON:
 		{
@@ -378,7 +378,9 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 		final var result = new ArrayList<CloudDataValue>(16);
 		for ( JsonNode regNode : json.path("registers") ) {
 			String name = nonEmptyString(regNode.path("name").asString());
-
+			if ( name == null ) {
+				continue;
+			}
 			final var meta = new LinkedHashMap<String, Object>(4);
 			populateNumberValue(regNode, "idx", REGISTER_INDEX_METADATA, meta);
 			populateNonEmptyValue(regNode, "type", REGISTER_TYPE_METADATA, meta);
@@ -527,7 +529,7 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	 *        the device ID
 	 * @return the data values
 	 */
-	private CloudDataValue[] resolveDeviceRegisters(CloudIntegrationConfiguration integration,
+	private CloudDataValue @Nullable [] resolveDeviceRegisters(CloudIntegrationConfiguration integration,
 			CloudDatumStreamConfiguration datumStream, String deviceId) {
 		assert datumStream != null && deviceId != null;
 		final var cache = getDeviceRegistersCache();
@@ -555,21 +557,19 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	 * This method can return a timestamp value for fields like these examples:
 	 * </p>
 	 *
-	 * <pre>{@code
-	 * {
-	 *   "ts":    "1729907680",
-	 *   "ts2":   "1729907680.123",
-	 *   "delta": 60.000,
-	 * }
-	 * }</pre>
+	 * <pre>{@code { "ts": "1729907680", "ts2": "1729907680.123", "delta":
+	 * 60.000, } }</pre>
 	 *
 	 * @param json
 	 *        the JSON node
 	 * @param field
 	 *        the name of the JSON field to extract the timestamp from
-	 * @return the parsed timestamp, or {@literal null}
+	 * @return the parsed timestamp, or {@code null}
 	 */
-	private static Instant parseTimestamp(JsonNode json, String field) {
+	private static @Nullable Instant parseTimestamp(@Nullable JsonNode json, String field) {
+		if ( json == null ) {
+			return null;
+		}
 		JsonNode fieldNode = json.path(field);
 		if ( !(fieldNode.isNumber() || fieldNode.isString()) ) {
 			return null;
@@ -591,10 +591,10 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	}
 
 	@SuppressWarnings("MixedMutabilityReturnType")
-	private static List<GeneralDatum> parseDatum(JsonNode json,
+	private static List<GeneralDatum> parseDatum(@Nullable JsonNode json,
 			CloudDatumStreamConfiguration datumStream, Map<String, List<ValueRef>> refsByRegisterName) {
 		if ( json == null ) {
-			return Collections.emptyList();
+			return List.of();
 		}
 		List<GeneralDatum> result = new ArrayList<>(32);
 		/*- EXAMPLE JSON:
@@ -692,7 +692,7 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 					}
 				}
 				if ( !samples.isEmpty() ) {
-					result.add(new GeneralDatum(new DatumId(datumStream.getKind(),
+					result.add(new GeneralDatum(DatumId.datumId(datumStream.getKind(),
 							datumStream.getObjectId(), datumStream.getSourceId(), ts), samples));
 				}
 			}
@@ -706,7 +706,7 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	 *
 	 * @return the cache
 	 */
-	public final Cache<String, CloudDataValue[]> getDeviceRegistersCache() {
+	public final @Nullable Cache<String, CloudDataValue[]> getDeviceRegistersCache() {
 		return deviceRegistersCache;
 	}
 
@@ -716,7 +716,8 @@ public class EgaugeCloudDatumStreamService extends BaseRestOperationsCloudDatumS
 	 * @param deviceRegistersCache
 	 *        the cache to set
 	 */
-	public final void setDeviceRegistersCache(Cache<String, CloudDataValue[]> deviceRegistersCache) {
+	public final void setDeviceRegistersCache(
+			@Nullable Cache<String, CloudDataValue[]> deviceRegistersCache) {
 		this.deviceRegistersCache = deviceRegistersCache;
 	}
 
