@@ -31,16 +31,19 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.FileCopyUtils;
@@ -49,6 +52,7 @@ import net.solarnetwork.central.biz.UserEventAppenderBiz;
 import net.solarnetwork.central.dao.SolarNodeOwnershipDao;
 import net.solarnetwork.central.datum.biz.DatumProcessor;
 import net.solarnetwork.central.datum.domain.GeneralNodeDatum;
+import net.solarnetwork.central.datum.domain.GeneralNodeDatumPK;
 import net.solarnetwork.central.datum.support.DatumUtils;
 import net.solarnetwork.central.datum.v2.dao.DatumWriteOnlyDao;
 import net.solarnetwork.central.datum.v2.domain.DatumPK;
@@ -87,8 +91,8 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 	private final DatumWriteOnlyDao datumDao;
 	private final InputDataEntityDao previousInputDataDao;
 	private final Map<String, TransformService> transformServices;
-	private DatumProcessor fluxPublisher;
-	private UserEventAppenderBiz userEventAppenderBiz;
+	private @Nullable DatumProcessor fluxPublisher;
+	private @Nullable UserEventAppenderBiz userEventAppenderBiz;
 
 	/**
 	 * Constructor.
@@ -104,7 +108,7 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 	 * @param transformServices
 	 *        the transform services
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public DaoDatumInputEndpointBiz(SolarNodeOwnershipDao nodeOwnershipDao,
 			EndpointConfigurationDao endpointDao, TransformConfigurationDao transformDao,
@@ -123,9 +127,9 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 	private static final MimeType JSON_TYPE = MimeType.valueOf("application/json");
 	private static final MimeType TEXT_TYPE = MimeType.valueOf("text/*");
 
-	private static LogEventInfo importErrorEvent(String msg, EndpointConfiguration endpoint,
-			TransformConfiguration xform, MimeType contentType, byte[] content, byte[] previousContent,
-			Map<String, String> parameters) {
+	private static LogEventInfo importErrorEvent(@Nullable String msg, EndpointConfiguration endpoint,
+			TransformConfiguration xform, MimeType contentType, byte @Nullable [] content,
+			byte @Nullable [] previousContent, @Nullable Map<String, String> parameters) {
 		var eventData = new LinkedHashMap<>(8);
 		eventData.put(ENDPOINT_ID_DATA_KEY, endpoint.getEndpointId());
 		eventData.put(TRANSFORM_ID_DATA_KEY, endpoint.getTransformId());
@@ -148,7 +152,7 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 		return event(DATUM_TAGS, msg, getJSONString(eventData, null), ERROR_TAG);
 	}
 
-	private static String eventContentValue(MimeType contentType, byte[] content) {
+	private static @Nullable String eventContentValue(MimeType contentType, byte @Nullable [] content) {
 		if ( content == null ) {
 			return null;
 		}
@@ -163,8 +167,8 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 	}
 
 	@Override
-	public Collection<DatumId> importDatum(Long userId, UUID endpointId, MimeType contentType,
-			InputStream in, Map<String, String> parameters) throws IOException {
+	public @Nullable Collection<DatumId> importDatum(Long userId, UUID endpointId, MimeType contentType,
+			InputStream in, @Nullable Map<String, String> parameters) throws IOException {
 		final UserUuidPK endpointPk = new UserUuidPK(requireNonNullArgument(userId, "userId"),
 				requireNonNullArgument(endpointId, "endpointId"));
 		final EndpointConfiguration endpoint = requireNonNullObject(endpointDao.get(endpointPk),
@@ -228,7 +232,7 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 								sourceId);
 						prevInputData = previousInputDao.getAndPut(key, inputData);
 						if ( prevInputData == null ) {
-							return Collections.emptyList();
+							return List.of();
 						}
 						params.put(TransformService.PARAM_PREVIOUS_INPUT,
 								new ByteArrayInputStream(prevInputData));
@@ -273,29 +277,36 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 			}
 		}
 
+		final Instant now = Instant.now();
+
 		var result = (endpoint.isIncludeResponseBody() ? new ArrayList<DatumId>(8) : null);
 		for ( Datum d : datum ) {
-			Object gd = DatumUtils.convertGeneralDatum(d);
+			Object gd = DatumUtils.convertGeneralDatum(d, now);
 			if ( gd instanceof GeneralNodeDatum gnd ) {
 				// use the endpoint's node/source IDs if provided
 				if ( endpoint.getNodeId() != null ) {
-					gnd.setNodeId(endpoint.getNodeId());
-				} else if ( parameters != null && parameters.containsKey(PARAM_NODE_ID) ) {
+					gd = gnd.copyWithId(new GeneralNodeDatumPK(endpoint.getNodeId(), gnd.getCreated(),
+							gnd.getSourceId()));
+				} else if ( parameters != null && parameters.get(PARAM_NODE_ID) != null ) {
 					try {
-						gnd.setNodeId(Long.valueOf(parameters.get(PARAM_NODE_ID)));
+						gd = gnd.copyWithId(
+								new GeneralNodeDatumPK(Long.valueOf(parameters.get(PARAM_NODE_ID)),
+										gnd.getCreated(), gnd.getSourceId()));
 					} catch ( IllegalArgumentException e ) {
 						// ignore and continue
 					}
 				}
 				if ( endpoint.getSourceId() != null ) {
-					gnd.setSourceId(endpoint.getSourceId());
-				} else if ( parameters != null && parameters.containsKey(PARAM_SOURCE_ID) ) {
-					gnd.setSourceId(parameters.get(PARAM_SOURCE_ID));
+					gd = gnd.copyWithId(new GeneralNodeDatumPK(gnd.getNodeId(), gnd.getCreated(),
+							endpoint.getSourceId()));
+				} else if ( parameters != null && parameters.get(PARAM_SOURCE_ID) != null ) {
+					gd = gnd.copyWithId(new GeneralNodeDatumPK(gnd.getNodeId(), gnd.getCreated(),
+							parameters.get(PARAM_SOURCE_ID)));
 				}
 
 				// verify ownership node is owner of endpoint
-				Long nodeId = requireNonNullArgument(gnd.getNodeId(), "nodeId");
-				String sourceId = requireNonNullArgument(gnd.getSourceId(), "sourceId");
+				final Long nodeId = gnd.getNodeId();
+				final String sourceId = gnd.getSourceId();
 				SolarNodeOwnership owner = requireNonNullObject(
 						nodeOwnershipDao.ownershipForNodeId(nodeId), nodeId);
 				if ( !userId.equals(owner.getUserId()) ) {
@@ -306,7 +317,7 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 				}
 
 				DatumPK pk = datumDao.persist(gnd);
-				if ( result != null ) {
+				if ( pk != null && result != null ) {
 					result.add(DatumId.nodeId(nodeId, sourceId, pk.getTimestamp()));
 				}
 
@@ -325,9 +336,9 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 	/**
 	 * Get the SolarFlux publisher.
 	 *
-	 * @return the publisher, or {@literal null}
+	 * @return the publisher, or {@code null}
 	 */
-	public DatumProcessor getFluxPublisher() {
+	public final @Nullable DatumProcessor getFluxPublisher() {
 		return fluxPublisher;
 	}
 
@@ -337,7 +348,7 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 	 * @param fluxPublisher
 	 *        the publisher to set
 	 */
-	public void setFluxPublisher(DatumProcessor fluxPublisher) {
+	public final void setFluxPublisher(@Nullable DatumProcessor fluxPublisher) {
 		this.fluxPublisher = fluxPublisher;
 	}
 
@@ -347,7 +358,7 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 	 * @return the service
 	 * @since 1.2
 	 */
-	public UserEventAppenderBiz getUserEventAppenderBiz() {
+	public final @Nullable UserEventAppenderBiz getUserEventAppenderBiz() {
 		return userEventAppenderBiz;
 	}
 
@@ -358,7 +369,7 @@ public class DaoDatumInputEndpointBiz implements DatumInputEndpointBiz, CentralD
 	 *        the service to set
 	 * @since 1.2
 	 */
-	public void setUserEventAppenderBiz(UserEventAppenderBiz userEventAppenderBiz) {
+	public final void setUserEventAppenderBiz(@Nullable UserEventAppenderBiz userEventAppenderBiz) {
 		this.userEventAppenderBiz = userEventAppenderBiz;
 	}
 
