@@ -44,7 +44,6 @@ import java.io.IOException;
 import java.sql.Timestamp;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -185,7 +184,7 @@ public class DbDatumRollupTests extends BaseDatumJdbcTestSupport {
 		Map<NodeSourcePK, ObjectDatumStreamMetadata> meta = insertDatumStream(log, jdbcTemplate, datums,
 				"UTC");
 		UUID streamId = null;
-		List<AggregateDatum> results = Collections.emptyList();
+		List<AggregateDatum> results = List.of();
 		if ( !meta.isEmpty() ) {
 			streamId = meta.values().iterator().next().getStreamId();
 			results = jdbcTemplate.query(
@@ -217,7 +216,7 @@ public class DbDatumRollupTests extends BaseDatumJdbcTestSupport {
 	 */
 	public static void rollup(JdbcOperations jdbcTemplate, UUID streamId, ZonedDateTime aggStart,
 			ZonedDateTime aggEnd, RollupCallback callback) {
-		List<AggregateDatum> results = Collections.emptyList();
+		List<AggregateDatum> results = List.of();
 		results = jdbcTemplate.query("select * from solardatm.rollup_datm_for_time_span(?::uuid,?,?)",
 				AggregateDatumEntityRowMapper.INSTANCE, streamId.toString(),
 				Timestamp.from(aggStart.toInstant()), Timestamp.from(aggEnd.toInstant()));
@@ -239,7 +238,7 @@ public class DbDatumRollupTests extends BaseDatumJdbcTestSupport {
 		Map<NodeSourcePK, ObjectDatumStreamMetadata> meta = insertDatumStream(log, jdbcTemplate, datums,
 				"UTC");
 		UUID streamId = null;
-		List<AggregateDatum> results = Collections.emptyList();
+		List<AggregateDatum> results = List.of();
 		if ( !meta.isEmpty() ) {
 			streamId = meta.values().iterator().next().getStreamId();
 			if ( !auxDatums.isEmpty() ) {
