@@ -27,8 +27,9 @@ import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.io.IOException;
 import java.sql.ResultSet;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import org.jspecify.annotations.Nullable;
 import org.springframework.jdbc.core.JdbcOperations;
 import org.springframework.jdbc.core.PreparedStatementCallback;
 import org.springframework.jdbc.core.PreparedStatementCreator;
@@ -60,7 +61,7 @@ public class JdbcChargePointStatusDao implements ChargePointStatusDao {
 	 * @param jdbcOps
 	 *        the JDBC operations
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public JdbcChargePointStatusDao(JdbcOperations jdbcOps) {
 		super();
@@ -69,7 +70,8 @@ public class JdbcChargePointStatusDao implements ChargePointStatusDao {
 
 	@Override
 	public FilterResults<ChargePointStatus, UserLongCompositePK> findFiltered(
-			ChargePointStatusFilter filter, List<SortDescriptor> sorts, Long offset, Integer max) {
+			ChargePointStatusFilter filter, @Nullable List<SortDescriptor> sorts, @Nullable Long offset,
+			@Nullable Integer max) {
 		requireNonNullArgument(filter, "filter");
 		final PreparedStatementCreator sql = new SelectChargePointStatus(filter);
 		List<ChargePointStatus> list = jdbcOps.query(sql, ChargePointStatusRowMapper.INSTANCE);
@@ -88,15 +90,16 @@ public class JdbcChargePointStatusDao implements ChargePointStatusDao {
 
 	@Override
 	public void findFilteredStream(ChargePointStatusFilter filter,
-			FilteredResultsProcessor<ChargePointStatus> processor, List<SortDescriptor> sortDescriptors,
-			Long offset, Integer max) throws IOException {
+			FilteredResultsProcessor<ChargePointStatus> processor,
+			@Nullable List<SortDescriptor> sortDescriptors, @Nullable Long offset, @Nullable Integer max)
+			throws IOException {
 		requireNonNullArgument(filter, "filter");
 		requireNonNullArgument(processor, "processor");
 		final PreparedStatementCreator sql = new SelectChargePointStatus(filter);
 		final RowMapper<ChargePointStatus> mapper = ChargePointStatusRowMapper.INSTANCE;
-		processor.start(null, null, null, Collections.emptyMap());
+		processor.start(null, null, null, Map.of());
 		try {
-			jdbcOps.execute(sql, (PreparedStatementCallback<Void>) ps -> {
+			jdbcOps.execute(sql, (PreparedStatementCallback<@Nullable Void>) ps -> {
 				try (ResultSet rs = ps.executeQuery()) {
 					int row = 0;
 					while ( rs.next() ) {
