@@ -24,18 +24,19 @@ package net.solarnetwork.central.ocpp.v16.service;
 
 import static java.lang.String.format;
 import static java.util.Collections.singletonMap;
+import static net.solarnetwork.util.ObjectUtils.nonnull;
 import static org.springframework.transaction.support.TransactionSynchronizationManager.isActualTransactionActive;
 import static org.springframework.transaction.support.TransactionSynchronizationManager.registerSynchronization;
 import java.io.Serial;
 import java.time.Instant;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.Executor;
 import java.util.stream.Collectors;
+import org.jspecify.annotations.Nullable;
 import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
@@ -98,7 +99,7 @@ public class OcppController extends BaseOcppController {
 	 * @param objectMapper
 	 *        the object mapper to use
 	 * @throws IllegalArgumentException
-	 *         if any parameter is {@literal null}
+	 *         if any parameter is {@code null}
 	 */
 	public OcppController(Executor executor, ChargePointRouter chargePointRouter,
 			UserNodeDao userNodeDao, NodeInstructionDao instructionDao,
@@ -133,7 +134,7 @@ public class OcppController extends BaseOcppController {
 
 					@Override
 					public Void doInTransaction(TransactionStatus status) {
-						ChargePoint cp = chargePointDao.get(chargePoint.getId());
+						ChargePoint cp = nonnull(chargePointDao.get(chargePoint.id()), "ChargePoint");
 						ChargePoint orig = new ChargePoint(cp);
 						KeyValue numConnsKey = confs.getConfigurationKey().stream()
 								.filter(k -> ConfigurationKey.NumberOfConnectors.getName()
@@ -154,13 +155,13 @@ public class OcppController extends BaseOcppController {
 
 						// add missing ChargePointConnector entities; remove excess
 						Collection<ChargePointConnector> connectors = chargePointConnectorDao
-								.findByChargePointId(cp.getId());
-						Map<Integer, ChargePointConnector> existing = connectors.stream().collect(
-								Collectors.toMap(cpc -> cpc.getId().getConnectorId(), cpc -> cpc));
+								.findByChargePointId(cp.id());
+						Map<Integer, ChargePointConnector> existing = connectors.stream()
+								.collect(Collectors.toMap(cpc -> cpc.id().getConnectorId(), cpc -> cpc));
 						for ( int i = 1; i <= cp.getConnectorCount(); i++ ) {
 							if ( !existing.containsKey(i) ) {
 								ChargePointConnector conn = new ChargePointConnector(
-										new ChargePointConnectorKey(cp.getId(), i), Instant.now());
+										new ChargePointConnectorKey(cp.id(), i), Instant.now());
 								conn.setInfo(StatusNotification.builder().withConnectorId(i)
 										.withTimestamp(conn.getCreated()).build());
 								log.info("Creating ChargePointConnector {} for Charge Point {}", i,
@@ -174,7 +175,7 @@ public class OcppController extends BaseOcppController {
 							int connId = e.getKey();
 							if ( connId < 0 || connId > cp.getConnectorCount() ) {
 								log.info("Deleting excess ChargePointConnector {} from Charge Point {}",
-										connId, cp.getId());
+										connId, cp.id());
 								chargePointConnectorDao.delete(e.getValue());
 								itr.remove();
 							}
@@ -207,8 +208,8 @@ public class OcppController extends BaseOcppController {
 		CentralChargePoint cp = chargePointForParameters(userNode, params);
 		if ( cp == null ) {
 			instruction.getInstruction().setState(InstructionState.Declined);
-			instruction.getInstruction().setResultParameters(
-					Collections.singletonMap("error", "ChargePoint not specified or not available."));
+			instruction.getInstruction()
+					.setResultParameters(Map.of("error", "ChargePoint not specified or not available."));
 			return instruction;
 		}
 		ChargePointAction action;
@@ -216,8 +217,8 @@ public class OcppController extends BaseOcppController {
 			action = ChargePointAction.valueOf(params.remove(OcppInstructionUtils.OCPP_ACTION_PARAM));
 		} catch ( IllegalArgumentException | NullPointerException e ) {
 			instruction.getInstruction().setState(InstructionState.Declined);
-			instruction.getInstruction().setResultParameters(
-					Collections.singletonMap("error", "OCPP action parameter missing."));
+			instruction.getInstruction()
+					.setResultParameters(Map.of("error", "OCPP action parameter missing."));
 			return instruction;
 		}
 		return OcppInstructionUtils.decodeJsonOcppInstructionMessage(objectMapper, action, params,
@@ -247,12 +248,15 @@ public class OcppController extends BaseOcppController {
 		final Long userId = (instr.chargePointIdentity.getUserIdentifier() instanceof Long
 				? (Long) instr.chargePointIdentity.getUserIdentifier()
 				: null);
+		final Long nodeId = nonnull(instr.getNodeId(), "Node ID");
+		final InstructionState instrState = nonnull(instr.getInstruction().getState(),
+				"Instruction state");
 
 		final ActionMessageProcessor<JsonNode, Void> handler = getInstructionHandler();
 		if ( handler != null ) {
 			log.trace("Passing OCPPv16 instruction {} to processor {}", instructionId, handler);
 			BasicActionMessage<JsonNode> cpMsg = new BasicActionMessage<>(instr.chargePointIdentity,
-					instr.getId().toString(), instr.action, instr.jsonPayload);
+					instr.id().toString(), instr.action, instr.jsonPayload);
 			ActionMessageResultHandler<JsonNode, Void> processor = (_, _, err) -> {
 				if ( err != null ) {
 					Throwable root = err;
@@ -261,8 +265,8 @@ public class OcppController extends BaseOcppController {
 					}
 					Map<String, Object> data = singletonMap(ERROR_DATA_KEY, format(
 							"Error handling OCPP action %s: %s", instr.action, root.getMessage()));
-					instructionDao.compareAndUpdateInstructionState(instructionId, instr.getNodeId(),
-							instr.getInstruction().getState(), InstructionState.Declined, data);
+					instructionDao.compareAndUpdateInstructionState(instructionId, nodeId, instrState,
+							InstructionState.Declined, data);
 					if ( userId != null ) {
 						generateUserEvent(userId, CHARGE_POINT_INSTRUCTION_ERROR_TAGS, "Failed to send",
 								data);
@@ -303,8 +307,8 @@ public class OcppController extends BaseOcppController {
 						instr.chargePointIdentity, root.getMessage());
 				Map<String, Object> data = singletonMap("error",
 						"Error handling OCPP action: " + root.getMessage());
-				instructionDao.compareAndUpdateInstructionState(instructionId, instr.getNodeId(),
-						instr.getInstruction().getState(), InstructionState.Declined, data);
+				instructionDao.compareAndUpdateInstructionState(instructionId, nodeId, instrState,
+						InstructionState.Declined, data);
 				if ( userId != null ) {
 					generateUserEvent(userId, CHARGE_POINT_INSTRUCTION_ERROR_TAGS, "Failed to send",
 							data);
@@ -315,8 +319,8 @@ public class OcppController extends BaseOcppController {
 					resultParameters = JsonUtils.getStringMapFromTree(objectMapper.valueToTree(res));
 				}
 				log.info("Sent OCPPv16 {} to charge point {}", instr.action, instr.chargePointIdentity);
-				instructionDao.compareAndUpdateInstructionState(instructionId, instr.getNodeId(),
-						instr.getInstruction().getState(), InstructionState.Completed, resultParameters);
+				instructionDao.compareAndUpdateInstructionState(instructionId, nodeId, instrState,
+						InstructionState.Completed, resultParameters);
 				if ( userId != null ) {
 					Map<String, Object> data = new HashMap<>(4);
 					data.put(ACTION_DATA_KEY, instr.action);
@@ -336,12 +340,12 @@ public class OcppController extends BaseOcppController {
 
 		private final ChargePointIdentity chargePointIdentity;
 		private final ChargePointAction action;
-		private final ObjectNode jsonPayload;
-		private final Object payload;
+		private final @Nullable ObjectNode jsonPayload;
+		private final @Nullable Object payload;
 
 		private OcppNodeInstruction(NodeInstruction instruction, InstructionState state,
 				ChargePointIdentity chargePointIdentity, ChargePointAction action,
-				ObjectNode jsonPayload, Object payload) {
+				@Nullable ObjectNode jsonPayload, @Nullable Object payload) {
 			super(instruction);
 			getInstruction().setState(state);
 			this.chargePointIdentity = chargePointIdentity;
