@@ -26,14 +26,15 @@ import static java.util.Collections.singleton;
 import static net.solarnetwork.central.oscp.web.OscpWebUtils.UrlPaths_20.UPDATE_ASSET_MEASUREMENTS_URL_PATH;
 import static net.solarnetwork.central.oscp.web.OscpWebUtils.UrlPaths_20.UPDATE_GROUP_MEASUREMENTS_URL_PATH;
 import static net.solarnetwork.central.oscp.web.OscpWebUtils.UrlPaths_20.V20;
+import static net.solarnetwork.util.ObjectUtils.nonnull;
 import static net.solarnetwork.util.ObjectUtils.requireNonNullArgument;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
+import org.jspecify.annotations.Nullable;
 import org.springframework.http.HttpMethod;
 import org.springframework.transaction.support.TransactionTemplate;
 import net.solarnetwork.central.datum.v2.dao.BasicDatumCriteria;
@@ -69,7 +70,7 @@ public class CapacityGroupMeasurementJob extends JobSupport {
 	private final AssetConfigurationDao assetDao;
 	private final MeasurementDao measurementDao;
 	private final ExternalSystemClient client;
-	private TransactionTemplate txTemplate;
+	private @Nullable TransactionTemplate txTemplate;
 
 	/**
 	 * Construct with properties.
@@ -87,20 +88,18 @@ public class CapacityGroupMeasurementJob extends JobSupport {
 	 * @param client
 	 *        the client to use
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public CapacityGroupMeasurementJob(OscpRole role, ExternalSystemConfigurationDao<?> dao,
 			CapacityGroupConfigurationDao capacityGroupDao, AssetConfigurationDao assetDao,
 			MeasurementDao measurementDao, ExternalSystemClient client) {
-		super();
+		super("OSCP", requireNonNullArgument(role, "role") + "-CapacityGroupMeasurement");
 		this.role = requireNonNullArgument(role, "role");
 		this.dao = requireNonNullArgument(dao, "dao");
 		this.capacityGroupDao = requireNonNullArgument(capacityGroupDao, "capacityGroupDao");
 		this.assetDao = requireNonNullArgument(assetDao, "assetDao");
 		this.measurementDao = requireNonNullArgument(measurementDao, "measurementDao");
 		this.client = requireNonNullArgument(client, "client");
-		setGroupId("OSCP");
-		setId(this.role + "-CapacityGroupMeasurement");
 		setMaximumWaitMs(1800000L);
 	}
 
@@ -111,7 +110,7 @@ public class CapacityGroupMeasurementJob extends JobSupport {
 	 *        the template
 	 * @return this instance for method chaining
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public CapacityGroupMeasurementJob withTxTemplate(TransactionTemplate txTemplate) {
 		this.txTemplate = requireNonNullArgument(txTemplate, "txTemplate");
@@ -149,14 +148,14 @@ public class CapacityGroupMeasurementJob extends JobSupport {
 		return dao.processExternalSystemWithExpiredMeasurement((ctx) -> {
 			remainingIterataions.decrementAndGet();
 
-			final CapacityGroupConfiguration group = switch (role) {
+			final CapacityGroupConfiguration group = nonnull(switch (role) {
 				case CapacityProvider -> capacityGroupDao.findForCapacityProvider(
 						ctx.config().getUserId(), ctx.config().getEntityId(), ctx.groupIdentifier());
 				case CapacityOptimizer -> capacityGroupDao.findForCapacityOptimizer(
 						ctx.config().getUserId(), ctx.config().getEntityId(), ctx.groupIdentifier());
 				default -> throw new IllegalArgumentException(
 						"OSCP role [%s] not supported.".formatted(role));
-			};
+			}, "Group");
 			final String combinedAssetId = group.combinedGroupAssetId() != null
 					? group.combinedGroupAssetId()
 					: ctx.config().combinedGroupAssetId();
@@ -186,16 +185,14 @@ public class CapacityGroupMeasurementJob extends JobSupport {
 					if ( combinedAssetId != null ) {
 						AssetMeasurement combined = combineAssetMeasurements(combinedAssetId,
 								measurements);
-						measurements = (combined == null ? Collections.emptyList()
-								: Collections.singletonList(combined));
+						measurements = (combined == null ? List.of() : List.of(combined));
 					}
 					msg = new UpdateAssetMeasurement(group.getIdentifier(), measurements);
 				} else {
 					List<EnergyMeasurement> measurements = energyMeasurements(assets, dateCriteria);
 					if ( combinedAssetId != null ) {
 						EnergyMeasurement combined = combineEnergyMeasurements(measurements);
-						measurements = (combined == null ? Collections.emptyList()
-								: Collections.singletonList(combined));
+						measurements = (combined == null ? List.of() : List.of(combined));
 					}
 					msg = new UpdateGroupMeasurements(group.getIdentifier(), measurements);
 				}
@@ -218,7 +215,8 @@ public class CapacityGroupMeasurementJob extends JobSupport {
 		});
 	}
 
-	private EnergyMeasurement combineEnergyMeasurements(List<EnergyMeasurement> measurements) {
+	private @Nullable EnergyMeasurement combineEnergyMeasurements(
+			@Nullable List<EnergyMeasurement> measurements) {
 		if ( measurements == null || measurements.isEmpty() ) {
 			return null;
 		}
@@ -251,8 +249,8 @@ public class CapacityGroupMeasurementJob extends JobSupport {
 		return result;
 	}
 
-	private InstantaneousMeasurement combineInstantaneousMeasurements(
-			List<InstantaneousMeasurement> measurements) {
+	private @Nullable InstantaneousMeasurement combineInstantaneousMeasurements(
+			@Nullable List<InstantaneousMeasurement> measurements) {
 		if ( measurements == null || measurements.isEmpty() ) {
 			return null;
 		}
@@ -280,8 +278,8 @@ public class CapacityGroupMeasurementJob extends JobSupport {
 		return result;
 	}
 
-	private AssetMeasurement combineAssetMeasurements(String combinedAssetId,
-			List<AssetMeasurement> measurements) {
+	private @Nullable AssetMeasurement combineAssetMeasurements(String combinedAssetId,
+			@Nullable List<AssetMeasurement> measurements) {
 		if ( measurements == null || measurements.isEmpty() ) {
 			return null;
 		}
