@@ -23,13 +23,15 @@
 package net.solarnetwork.central.oscp.domain.test;
 
 import static java.lang.String.format;
+import static java.time.Instant.now;
+import static net.solarnetwork.central.test.CommonTestUtils.randomLong;
+import static net.solarnetwork.central.test.CommonTestUtils.randomString;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
 import java.io.IOException;
-import java.time.Instant;
-import java.util.Collections;
+import java.util.Map;
 import java.util.UUID;
 import org.json.JSONException;
 import org.junit.jupiter.api.Test;
@@ -56,7 +58,8 @@ public class CapacityOptimizerConfigurationTests {
 
 		// WHEN
 		CapacityOptimizerConfiguration conf = new CapacityOptimizerConfiguration(
-				UserLongCompositePK.unassignedEntityIdKey(userId), Instant.now());
+				UserLongCompositePK.unassignedEntityIdKey(userId), now(), randomString(), randomLong(),
+				RegistrationStatus.Pending);
 
 		// THEN
 		assertThat("Entity key component not null", conf.getId().getEntityId(), is(notNullValue()));
@@ -74,6 +77,7 @@ public class CapacityOptimizerConfigurationTests {
 				, "modified":"%s"
 				, "enabled":%s
 				, "name":"%s"
+				, "flexibilityProviderId":%d
 				, "baseUrl":"%s"
 				, "registrationStatus":"%s"
 				, "serviceProps":%s
@@ -85,6 +89,7 @@ public class CapacityOptimizerConfigurationTests {
 				DateUtils.ISO_DATE_TIME_ALT_UTC.format(conf.getModified()),
 				conf.isEnabled(),
 				conf.getName(),
+				conf.getFlexibilityProviderId(),
 				conf.getBaseUrl(),
 				conf.getRegistrationStatus().name(),
 				JsonUtils.getJSONString(conf.getServiceProps(), "null")
@@ -99,14 +104,14 @@ public class CapacityOptimizerConfigurationTests {
 
 		Long userId = UUID.randomUUID().getMostSignificantBits();
 		Long confId = UUID.randomUUID().getMostSignificantBits();
-		CapacityOptimizerConfiguration conf = new CapacityOptimizerConfiguration(userId, confId,
-				Instant.now());
+		CapacityOptimizerConfiguration conf = new CapacityOptimizerConfiguration(userId, confId, now(),
+				randomString(), randomLong(), RegistrationStatus.Pending);
 		conf.setModified(conf.getCreated().plusSeconds(9));
 		conf.setEnabled(true);
 		conf.setName("Howdy");
 		conf.setBaseUrl("https://localhost/" + UUID.randomUUID());
 		conf.setRegistrationStatus(RegistrationStatus.Pending);
-		conf.setServiceProps(Collections.singletonMap("foo", "bar"));
+		conf.setServiceProps(Map.of("foo", "bar"));
 
 		// WHEN
 		String json = mapper.writeValueAsString(conf);
