@@ -38,9 +38,12 @@ import java.time.Period;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
+import java.util.UUID;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -64,6 +67,7 @@ import net.solarnetwork.central.datum.domain.GeneralNodeDatumFilter;
 import net.solarnetwork.central.datum.domain.GeneralNodeDatumFilterMatch;
 import net.solarnetwork.central.datum.domain.GeneralNodeDatumPK;
 import net.solarnetwork.central.datum.domain.NodeSourcePK;
+import net.solarnetwork.central.datum.domain.PropertyNameFilter;
 import net.solarnetwork.central.datum.domain.ReportingGeneralLocationDatumMatch;
 import net.solarnetwork.central.datum.domain.ReportingGeneralNodeDatumMatch;
 import net.solarnetwork.central.datum.domain.StreamDatumFilter;
@@ -76,6 +80,7 @@ import net.solarnetwork.central.datum.v2.dao.ReadingDatumDao;
 import net.solarnetwork.central.datum.v2.domain.Datum;
 import net.solarnetwork.central.datum.v2.domain.DatumDateInterval;
 import net.solarnetwork.central.datum.v2.domain.DatumPK;
+import net.solarnetwork.central.datum.v2.domain.PropertyRestrictedObjectDatumStreamMetadata;
 import net.solarnetwork.central.datum.v2.domain.ReadingDatum;
 import net.solarnetwork.central.datum.v2.support.DatumUtils;
 import net.solarnetwork.central.datum.v2.support.StreamDatumFilteredResultsProcessor;
@@ -98,6 +103,7 @@ import net.solarnetwork.domain.SortDescriptor;
 import net.solarnetwork.domain.datum.Aggregation;
 import net.solarnetwork.domain.datum.ObjectDatumKind;
 import net.solarnetwork.domain.datum.ObjectDatumStreamMetadata;
+import net.solarnetwork.domain.datum.ObjectDatumStreamMetadataProvider;
 
 /**
  * Implementation of {@link QueryBiz}.
@@ -138,7 +144,7 @@ public class DaoQueryBiz implements QueryBiz {
 	 * @param nodeOwnershipDao
 	 *        the node ownership DAO
 	 * @throws IllegalArgumentException
-	 *         if any argument is {@literal null}
+	 *         if any argument is {@code null}
 	 */
 	public DaoQueryBiz(DatumEntityDao datumDao, DatumStreamMetadataDao metaDao,
 			ReadingDatumDao readingDao, SolarNodeOwnershipDao nodeOwnershipDao) {
@@ -170,10 +176,23 @@ public class DaoQueryBiz implements QueryBiz {
 		c.setObjectKind(ObjectDatumKind.Node);
 		validateDatumCriteria(c);
 		Iterable<DatumDateInterval> results = datumDao.findAvailableInterval(c);
+		ReportableInterval result = null;
 		for ( DatumDateInterval interval : results ) {
-			return new ReportableInterval(interval.getStart(), interval.getEnd(), interval.getZone());
+			if ( result == null ) {
+				result = new ReportableInterval(interval.getStart(), interval.getEnd(),
+						interval.getZone());
+			} else {
+				if ( interval.getStart().isBefore(result.startDate().toInstant()) ) {
+					result = new ReportableInterval(interval.getStart(), result.endDate().toInstant(),
+							result.getTimeZone());
+				}
+				if ( interval.getEnd().isAfter(result.endDate().toInstant()) ) {
+					result = new ReportableInterval(result.startDate().toInstant(), interval.getEnd(),
+							result.getTimeZone());
+				}
+			}
 		}
-		return null;
+		return result;
 	}
 
 	@Override
@@ -229,7 +248,7 @@ public class DaoQueryBiz implements QueryBiz {
 	public Set<Long> findAvailableNodes(SecurityActor actor) {
 		Set<Long> nodeIds = null;
 		if ( actor instanceof SecurityNode a ) {
-			nodeIds = Collections.singleton(a.getNodeId());
+			nodeIds = Set.of(a.getNodeId());
 		} else if ( actor instanceof SecurityToken a ) {
 			String tokenId = a.getToken();
 			Long[] ids = nodeOwnershipDao.nonArchivedNodeIdsForToken(tokenId);
@@ -251,11 +270,41 @@ public class DaoQueryBiz implements QueryBiz {
 		c.setObjectKind(ObjectDatumKind.Node);
 		validateDatumCriteria(c);
 		ObjectDatumStreamFilterResults<Datum, DatumPK> daoResults = datumDao.findFiltered(c);
+		Map<UUID, ObjectDatumStreamMetadata> metaCache = (filter.getPropertyName() != null
+				? new HashMap<>(daoResults.metadataStreamIds().size())
+				: null);
 		List<GeneralNodeDatumFilterMatch> data = stream(daoResults.spliterator(), false)
-				.map(e -> toGeneralNodeDatum(e, daoResults.metadataForStreamId(e.getStreamId())))
+				.map(e -> toGeneralNodeDatum(e,
+						metadataForStreamId(e.getStreamId(), daoResults, filter, metaCache)))
 				.collect(toList());
 		return new BasicFilterResults<>(data, daoResults.getTotalResults(),
 				daoResults.getStartingOffset(), daoResults.getReturnedResultCount());
+	}
+
+	private static ObjectDatumStreamMetadata metadataForStreamId(UUID streamId,
+			ObjectDatumStreamMetadataProvider provider, PropertyNameFilter filter,
+			Map<UUID, ObjectDatumStreamMetadata> cache) {
+		if ( provider == null || streamId == null ) {
+			return null;
+		}
+		ObjectDatumStreamMetadata meta = null;
+		if ( cache != null && filter.getPropertyName() != null ) {
+			meta = cache.get(streamId);
+			if ( meta != null ) {
+				return meta;
+			}
+		}
+
+		meta = provider.metadataForStreamId(streamId);
+		if ( filter == null || filter.getPropertyName() == null ) {
+			return meta;
+		}
+		meta = new PropertyRestrictedObjectDatumStreamMetadata(meta,
+				new LinkedHashSet<>(List.of(filter.getPropertyNames())));
+		if ( cache != null ) {
+			cache.put(streamId, meta);
+		}
+		return meta;
 	}
 
 	@Override
@@ -268,8 +317,12 @@ public class DaoQueryBiz implements QueryBiz {
 		c.setObjectKind(ObjectDatumKind.Node);
 		validateDatumCriteria(c);
 		ObjectDatumStreamFilterResults<Datum, DatumPK> daoResults = datumDao.findFiltered(c);
+		Map<UUID, ObjectDatumStreamMetadata> metaCache = (filter.getPropertyName() != null
+				? new HashMap<>(daoResults.metadataStreamIds().size())
+				: null);
 		List<ReportingGeneralNodeDatumMatch> data = stream(daoResults.spliterator(), false)
-				.map(e -> toGeneralNodeDatum(e, daoResults.metadataForStreamId(e.getStreamId())))
+				.map(e -> toGeneralNodeDatum(e,
+						metadataForStreamId(e.getStreamId(), daoResults, filter, metaCache)))
 				.collect(toList());
 		return new BasicFilterResults<>(data, daoResults.getTotalResults(),
 				daoResults.getStartingOffset(), daoResults.getReturnedResultCount());
@@ -399,8 +452,12 @@ public class DaoQueryBiz implements QueryBiz {
 		c.setReadingType(readingType);
 		validateDatumCriteria(c);
 		ObjectDatumStreamFilterResults<Datum, DatumPK> daoResults = datumDao.findFiltered(c);
+		Map<UUID, ObjectDatumStreamMetadata> metaCache = (filter.getPropertyName() != null
+				? new HashMap<>(daoResults.metadataStreamIds().size())
+				: null);
 		List<ReportingGeneralNodeDatumMatch> data = stream(daoResults.spliterator(), false)
-				.map(e -> toGeneralNodeDatum(e, daoResults.metadataForStreamId(e.getStreamId())))
+				.map(e -> toGeneralNodeDatum(e,
+						metadataForStreamId(e.getStreamId(), daoResults, filter, metaCache)))
 				.collect(toList());
 		return new BasicFilterResults<>(data, daoResults.getTotalResults(),
 				daoResults.getStartingOffset(), daoResults.getReturnedResultCount());
@@ -419,8 +476,12 @@ public class DaoQueryBiz implements QueryBiz {
 		validateDatumCriteria(c);
 		ObjectDatumStreamFilterResults<ReadingDatum, DatumPK> daoResults = readingDao
 				.findDatumReadingFiltered(c);
+		Map<UUID, ObjectDatumStreamMetadata> metaCache = (filter.getPropertyName() != null
+				? new HashMap<>(daoResults.metadataStreamIds().size())
+				: null);
 		List<ReportingGeneralNodeDatumMatch> data = stream(daoResults.spliterator(), false)
-				.map(e -> toGeneralNodeDatum(e, daoResults.metadataForStreamId(e.getStreamId())))
+				.map(e -> toGeneralNodeDatum(e,
+						metadataForStreamId(e.getStreamId(), daoResults, filter, metaCache)))
 				.collect(toList());
 		return new BasicFilterResults<>(data, daoResults.getTotalResults(),
 				daoResults.getStartingOffset(), daoResults.getReturnedResultCount());
@@ -491,8 +552,12 @@ public class DaoQueryBiz implements QueryBiz {
 				limitFilterOffset(offset), limitFilterMaximum(max));
 		c.setObjectKind(ObjectDatumKind.Location);
 		ObjectDatumStreamFilterResults<Datum, DatumPK> daoResults = datumDao.findFiltered(c);
+		Map<UUID, ObjectDatumStreamMetadata> metaCache = (filter.getPropertyName() != null
+				? new HashMap<>(daoResults.metadataStreamIds().size())
+				: null);
 		List<GeneralLocationDatumFilterMatch> data = stream(daoResults.spliterator(), false)
-				.map(e -> toGeneralLocationDatum(e, daoResults.metadataForStreamId(e.getStreamId())))
+				.map(e -> toGeneralLocationDatum(e,
+						metadataForStreamId(e.getStreamId(), daoResults, filter, metaCache)))
 				.collect(toList());
 		return new BasicFilterResults<>(data, daoResults.getTotalResults(),
 				daoResults.getStartingOffset(), daoResults.getReturnedResultCount());
@@ -507,8 +572,12 @@ public class DaoQueryBiz implements QueryBiz {
 				sortDescriptors, limitFilterOffset(offset), limitFilterMaximum(max));
 		c.setObjectKind(ObjectDatumKind.Location);
 		ObjectDatumStreamFilterResults<Datum, DatumPK> daoResults = datumDao.findFiltered(c);
+		Map<UUID, ObjectDatumStreamMetadata> metaCache = (filter.getPropertyName() != null
+				? new HashMap<>(daoResults.metadataStreamIds().size())
+				: null);
 		List<ReportingGeneralLocationDatumMatch> data = stream(daoResults.spliterator(), false)
-				.map(e -> toGeneralLocationDatum(e, daoResults.metadataForStreamId(e.getStreamId())))
+				.map(e -> toGeneralLocationDatum(e,
+						metadataForStreamId(e.getStreamId(), daoResults, filter, metaCache)))
 				.collect(toList());
 		return new BasicFilterResults<>(data, daoResults.getTotalResults(),
 				daoResults.getStartingOffset(), daoResults.getReturnedResultCount());
