@@ -31,7 +31,6 @@ import java.time.format.FormatStyle;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -92,7 +91,7 @@ public class UserAlertController extends ControllerSupport {
 	@ModelAttribute("nodeDataAlertTypes")
 	public List<UserAlertType> nodeDataAlertTypes() {
 		// now, only one alert type!
-		return Collections.singletonList(UserAlertType.NodeStaleData);
+		return List.of(UserAlertType.NodeStaleData);
 	}
 
 	@ModelAttribute("alertStatuses")
