@@ -45,6 +45,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -103,11 +104,9 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 		Address address = addressDao.get(addressDao.save(createTestAddress()));
 		Account account = accountDao.get(accountDao.save(createTestAccount(address)));
 		SnfInvoice entity = new SnfInvoice(account.getId().getId(), account.getUserId(),
-				Instant.ofEpochMilli(System.currentTimeMillis()));
+				Instant.ofEpochMilli(System.currentTimeMillis()), LocalDate.of(2019, 12, 1),
+				LocalDate.of(2020, 1, 1), "NZD");
 		entity.setAddress(address);
-		entity.setCurrencyCode("NZD");
-		entity.setStartDate(LocalDate.of(2019, 12, 1));
-		entity.setEndDate(LocalDate.of(2020, 1, 1));
 		UserLongPK pk = dao.save(entity);
 		assertThat("PK created", pk.getId(), notNullValue());
 		getSqlSessionTemplate().flushStatements();
@@ -132,7 +131,7 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 
 		SnfInvoiceItem item1 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
 				new BigDecimal("1.23"));
-		item1.setMetadata(Collections.singletonMap("just", "testing"));
+		item1.setMetadata(Map.of("just", "testing"));
 		SnfInvoiceItem item2 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
 				new BigDecimal("2.34"));
 		SnfInvoiceItem item3 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
@@ -163,16 +162,14 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 		List<SnfInvoice> result = new ArrayList<>(count);
 		for ( int i = 0; i < count; i++ ) {
 			SnfInvoice invoice = new SnfInvoice(account.getId().getId(), account.getUserId(),
-					Instant.ofEpochMilli(System.currentTimeMillis()));
+					Instant.ofEpochMilli(System.currentTimeMillis()), start.plusMonths(i),
+					start.plusMonths(i + 1), currencyCode);
 			invoice.setAddress(address);
-			invoice.setCurrencyCode(currencyCode);
-			invoice.setStartDate(start.plusMonths(i));
-			invoice.setEndDate(start.plusMonths(i + 1));
 			UserLongPK invoiceId = dao.save(invoice);
 
 			SnfInvoiceItem item1 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
 					new BigDecimal("1.23"));
-			item1.setMetadata(Collections.singletonMap("just", "testing"));
+			item1.setMetadata(Map.of("just", "testing"));
 			SnfInvoiceItem item2 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
 					new BigDecimal("2.34"));
 			SnfInvoiceItem item3 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
@@ -189,11 +186,9 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 	private SnfInvoice createInvoiceWithCreditUse(Account account, Address address, String currencyCode,
 			LocalDate date, BigDecimal fixed, BigDecimal credit) {
 		SnfInvoice invoice = new SnfInvoice(account.getId().getId(), account.getUserId(),
-				Instant.ofEpochMilli(System.currentTimeMillis()));
+				Instant.ofEpochMilli(System.currentTimeMillis()), date, date.plusMonths(1),
+				currencyCode);
 		invoice.setAddress(address);
-		invoice.setCurrencyCode(currencyCode);
-		invoice.setStartDate(date);
-		invoice.setEndDate(date.plusMonths(1));
 		UserLongPK invoiceId = dao.save(invoice);
 
 		SnfInvoiceItem item1 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE, fixed);
@@ -209,11 +204,9 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 	private SnfInvoice createInvoiceWithCreditGrant(Account account, Address address,
 			String currencyCode, LocalDate date, BigDecimal credit) {
 		SnfInvoice invoice = new SnfInvoice(account.getId().getId(), account.getUserId(),
-				Instant.ofEpochMilli(System.currentTimeMillis()));
+				Instant.ofEpochMilli(System.currentTimeMillis()), date, date.plusMonths(1),
+				currencyCode);
 		invoice.setAddress(address);
-		invoice.setCurrencyCode(currencyCode);
-		invoice.setStartDate(date);
-		invoice.setEndDate(date.plusMonths(1));
 		UserLongPK invoiceId = dao.save(invoice);
 
 		SnfInvoiceItem item1 = newItem(invoice, Credit, "account-credit-add", BigDecimal.ONE, credit);
@@ -239,8 +232,7 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 		assertThat("Returned result count", result.getReturnedResultCount(), equalTo(4));
 		assertThat("Total results provided", result.getTotalResults(), equalTo(4L));
 
-		List<SnfInvoice> expectedInvoices = Stream
-				.concat(Collections.singleton(last).stream(), others.stream())
+		List<SnfInvoice> expectedInvoices = Stream.concat(Set.of(last).stream(), others.stream())
 				.sorted(Collections.reverseOrder(SnfInvoice.SORT_BY_DATE)).collect(Collectors.toList());
 
 		List<SnfInvoice> invoices = stream(result.spliterator(), false).collect(toList());
@@ -262,8 +254,7 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 				accountDao.get(new UserLongPK(last.getUserId(), last.getAccountId())), last.getAddress(),
 				"NZD", last.getStartDate().plusMonths(1), 3);
 
-		final List<SnfInvoice> expectedInvoices = Stream
-				.concat(Collections.singleton(last).stream(), others.stream())
+		final List<SnfInvoice> expectedInvoices = Stream.concat(Set.of(last).stream(), others.stream())
 				.sorted(Collections.reverseOrder(SnfInvoice.SORT_BY_DATE)).collect(Collectors.toList());
 
 		// WHEN
@@ -309,8 +300,7 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 		assertThat("Returned result count", result.getReturnedResultCount(), equalTo(4));
 		assertThat("Total results provided", result.getTotalResults(), equalTo(4L));
 
-		List<SnfInvoice> expectedInvoices = Stream
-				.concat(Collections.singleton(last).stream(), others.stream())
+		List<SnfInvoice> expectedInvoices = Stream.concat(Set.of(last).stream(), others.stream())
 				.sorted(Collections.reverseOrder(SnfInvoice.SORT_BY_DATE)).collect(Collectors.toList());
 
 		List<SnfInvoice> invoices = stream(result.spliterator(), false).collect(toList());
@@ -332,8 +322,7 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 				accountDao.get(new UserLongPK(last.getUserId(), last.getAccountId())), last.getAddress(),
 				"NZD", last.getStartDate().plusMonths(1), 3);
 
-		final List<SnfInvoice> expectedInvoices = Stream
-				.concat(Collections.singleton(last).stream(), others.stream())
+		final List<SnfInvoice> expectedInvoices = Stream.concat(Set.of(last).stream(), others.stream())
 				.sorted(Collections.reverseOrder(SnfInvoice.SORT_BY_DATE)).collect(Collectors.toList());
 
 		// WHEN
@@ -487,7 +476,7 @@ public class MyBatisSnfInvoiceDaoTests extends AbstractMyBatisDaoTestSupport {
 
 		SnfInvoiceItem item1 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
 				new BigDecimal("1.23"));
-		item1.setMetadata(Collections.singletonMap("just", "testing"));
+		item1.setMetadata(Map.of("just", "testing"));
 		SnfInvoiceItem item2 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
 				new BigDecimal("2.34"));
 		SnfInvoiceItem item3 = newItem(invoice, Fixed, TEST_PROD_KEY, BigDecimal.ONE,
